Freedom Sanbox Ant Deploy/src/objects/ARPP_Detail__c.object
<CustomObject>
    <description>New object for ARPP  calculation</description>
    <fields>
        <fullName>Action_Amount_Revenue__c</fullName>
        <formula>Action_Plan_Amount__c  +  Action_Plan_Trial_Comm_Amount__c  +  Action_Plan_Upfront_Comm_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Amount Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Trial_Comm_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expected Trial Comm Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_Plan_Upfront_Comm_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expected Upfront Comm Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Commission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Commission</label>
        <referenceTo>Commission__c</referenceTo>
        <relationshipName>ARPP_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Product_Name__c</fullName>
        <label>Actual Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approve_Action_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approve Action Plan</label>
        <referenceTo>Approve_Action_Plan__c</referenceTo>
        <relationshipName>ARPP_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected Commission</label>
        <referenceTo>Commission__c</referenceTo>
        <relationshipLabel>RPP Details (Commission)</relationshipLabel>
        <relationshipName>ARPP_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ET_Remark__c</fullName>
        <label>Actual Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ARPP_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Execution_Tracker_Actual_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Product</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>RPP Details (Execution Tracker Actual Product)</relationshipLabel>
        <relationshipName>ARPP_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Execution_Tracker_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Execution_Tracker_Total_Revenue__c</fullName>
        <formula>Execution_Tracker_Amount__c + Execution_Tracker_upfront_Comm_Amount__c +  Execution_Tracker_Trial_Comm_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Execution_Tracker_Trial_Comm_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Trial Comm Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Execution_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Tracker</label>
        <referenceTo>Execution_Tracker__c</referenceTo>
        <relationshipName>ARPP_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Execution_Tracker_upfront_Comm_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Upfront Comm Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected Product</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>RPP Details (Product)</relationshipLabel>
        <relationshipName>ARPP_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Expected Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Difference__c</fullName>
        <formula>Action_Amount_Revenue__c - Execution_Tracker_Total_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bond</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RPP Detail</label>
    <nameField>
        <displayFormat>RPP-{00000}</displayFormat>
        <label>RPP Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RPP Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>